# stiletto

./: .gitignore  LICENSE  Makefile  README.md  assembly.ml  compile.ml  dune  dune-project  errors.ml  exprs.ml  gc.c  gc.h  graph.ml  lexer.mll  main.c  main.ml  parser.mly  phases.ml  pretty.ml  run.sh  runner.ml  test.ml
input/do_err/: README
input/do_pass/: README  btree.stile  cons.stile  function.stile  testing.stile
input/dont_err/: README
input/dont_pass/: README
